--- a/Sorting/RemoteSystemsTempFiles/.project
+++ b/Sorting/RemoteSystemsTempFiles/.project
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>RemoteSystemsTempFiles</name>
-	<comment></comment>
-	<projects>
-	</projects>
+	<comment/>
+	<projects/>
 	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments/>
+		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.rse.ui.remoteSystemsTempNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
