--- a/DataStructures/pom.xml
+++ b/DataStructures/pom.xml
@@ -22,6 +22,12 @@
             <version>1.2.1</version>
         </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
+        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
