--- a/DataStructures/pom.xml
+++ b/DataStructures/pom.xml
@@ -16,11 +16,11 @@
             <version>3.1.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-core -->
-       <!-- <dependency>
+       <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
             <version>1.2.1</version>
-        </dependency>-->
+       </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
         <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
         <dependency>
