--- a/DataStructures/pom.xml
+++ b/DataStructures/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>hadoop-common</artifactId>
             <version>3.2.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/antlr/antlr -->
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
