Low level design

--- a/DataStructures/.gitignore
+++ b/DataStructures/.gitignore
@@ -11,12 +11,11 @@
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea/
+.idea/*
 *.iws
 *.iml
 *.ipr
 compiler.xml
-workspace.xml
 .idea/workspace.xml
 ../.DS_Store
 ../.idea/
